--- a/.github/workflows/update_ad_rules.yml
+++ b/.github/workflows/update_ad_rules.yml
@@ -2,8 +2,11 @@ name: 更新广告规则并合并
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # 每天 UTC 9 点自动执行
+    - cron: '0 1 * * *'  # 每天 UTC 1 点自动执行
   workflow_dispatch:      # 支持手动触发
+
+permissions:
+  contents: write   # ✅ 必须，允许写入
 
 jobs:
   update-ad-rules:
@@ -12,6 +15,9 @@ jobs:
     steps:
       - name: 签出存储库
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: 从上游下载 sr_cnip_ad.conf
         run: |
@@ -30,4 +36,4 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add a-nomad.conf
-          git diff --cached --quiet || (git commit -m "使用最新广告规则自动更新 a-nomad.conf" && git push)
+          git diff --cached --quiet || (git commit -m "使用最新广告规则自动更新 a-nomad.conf" && git push origin main)
